# opencv

Learn-OpenCV-4/Chapter_04/: CMakeCache.txt  Chapter4_Phototool  Makefile  cmake_install.cmake
Learn-OpenCV-4/Chapter_05/: main.cpp
Learn-OpenCV-4/Chapter_06/: opencv
Learn-OpenCV-4/Chapter_07/: overlayFacemask.cpp
Learn-OpenCV-4/Chapter_08/: CMakeLists.txt  blur.cpp  dilation.cpp  erosion.cpp
Learn-OpenCV-4/Chapter_09/: camshiftTracker.cpp
Learn-OpenCV-4/mat/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  sample
